# NoKe

./: README.md  dvc.yaml  pyproject.toml
deploy/: Dockerfile  Dockerfile.serve
deploy/extension/: content.js  manifest.json
fake_news/: train.py
fake_news/model/: base.py  transformer_based.py  tree_based.py
fake_news/server/: main.py
fake_news/utils/: dataloaders.py  features.py
notebooks/: error_analysis.ipynb
